--- a/GrupoEmpresarial-war/web/interfaz/usuario/componente/cpt-formulario-usuario.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/usuario/componente/cpt-formulario-usuario.xhtml
@@ -84,10 +84,22 @@
                 </div>
                 <div class="ui-grid-row">
                     <div class="ui-grid-col-3">
-                        <p:outputLabel for="txtIdGrupo" value="Grupo Empresarial:" styleClass="etiquetaFormularioAdministracion"/>
+                        <p:outputLabel for="txtIdGrupo" value="ID Grupo: " styleClass="etiquetaFormularioAdministracion"/>
                     </div>
                     <div class="ui-grid-col-9">
                         <p:inputText id="txtIdGrupo" value="#{MbAdministrarUsuario.usuarioSeleccionado.idIdentificacion}" required="true"  style="width: 90%;"/>                    
+                    </div>
+                </div>
+                <div class="ui-grid-row">
+                    <div class="ui-grid-col-3">
+                        <p:outputLabel value="Nivel Permiso" styleClass="etiquetaFormularioAdministracion"/>
+                    </div>
+                    <div class="ui-grid-col-9">
+                        <p:selectOneMenu id="cboNivelPermiso" value="#{MbAdministrarUsuario.usuarioSeleccionado.nivelPermiso}" >
+                            <f:selectItem itemLabel="Seleccione uno" itemValue="" />
+                            <f:selectItem itemLabel="Escritura" itemValue="ESCRITURA" />
+                            <f:selectItem itemLabel="Lectura" itemValue="LECTURA" />
+                        </p:selectOneMenu>
                     </div>
                 </div>
                 <div class="ui-grid-row">
